@@ -1,6 +1,8 @@
 BUILD_DIR=build-$(shell uname -r)
 BINDIR = ../$(BUILD_DIR)
 CC=/usr/bin/gcc -g $(BUILD_BITS)
+COMPILE.cpp= $(CC) -E -C $(CFLAGS) $(CPPFLAGS)
+MACH = $(shell uname -i)
 CPPFLAGS += -I. \
 	-I../common/ctf \
 	-I../uts/common/ \
@@ -13,9 +15,7 @@ CPPFLAGS += -I. \
 CPPFLAGS += -D_ILP32 -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64 -D_LONGLONG_TYPE
 
 LIB = ../$(BUILD_DIR)/libdtrace.a
-
-all: $(LIB)
-	@/bin/true
+DLIBDIR = /usr/lib/dtrace
 
 $(LIB): \
 	$(LIB)(drti.o) \
@@ -58,6 +58,25 @@ $(LIB): \
 	$(LIB)(dt_subr.o) \
 	$(LIB)(dt_work.o) \
 	$(LIB)(dt_xlator.o)
+
+DLIBSRCS += \
+        errno.d \
+        net.d \
+        fc.d \
+        io.d \
+        ip.d \
+        iscsit.d \
+        nfs.d \
+        procfs.d \
+        regs.d \
+        sched.d \
+        signal.d \
+        scsi.d \
+        srp.d \
+        sysevent.d \
+        tcp.d \
+        udp.d \
+        unistd.d
 
 $(BINDIR)/dt_grammar.h $(LIB)(dt_grammar.o): dt_grammar.y $(H)
 	$(YACC) -d dt_grammar.y
@@ -105,6 +124,59 @@ dt_errtags.c: dt_errtags.h mkerrtags.sh
 dt_names.c: mknames.sh
 	sh mknames.sh <../uts/common/sys/dtrace.h | sed -e 's/\\n/\n/g' > dt_names.c
 
+%.sed.in.c: %.sed.in
+	cp $< $@
+%.sed: %.sed.in.c
+	$(COMPILE.cpp) -D_KERNEL $< | tr -d ' ' | tr '"' '@' | \
+            sed 's/\&/\\\&/g' | grep '^s/' > $@
+	-rm -f $<
+
+errno.d: mkerrno.sh /usr/include/asm-generic/errno-base.h
+	sh mkerrno.sh < /usr/include/asm-generic/errno-base.h \
+	| sed -e 's/\\n/\n/g' > $@
+
+signal.d: mksignal.sh /usr/include/bits/signum.h
+	sh mksignal.sh < /usr/include/bits/signum.h \
+	| sed -e 's/\\n/\n/g' > $@
+
+
+procfs.d: procfs.sed procfs.d.in
+	sed -f procfs.sed < procfs.d.in > $@
+io.d: io.sed io.d.in
+	sed -f io.sed < io.d.in > $@
+ip.d: ip.sed ip.d.in
+	sed -f ip.sed < ip.d.in > $@
+net.d: net.sed net.d.in
+	sed -f net.sed < net.d.in > $@
+sysevent.d: sysevent.sed sysevent.d.in
+	sed -f sysevent.sed < sysevent.d.in > $@
+tcp.d: tcp.sed tcp.d.in
+	sed -f tcp.sed < tcp.d.in > $@
+udp.d: udp.sed udp.d.in
+	sed -f udp.sed < udp.d.in > $@
+
+./$(MACH)/regs.sed: ./$(MACH)/regs.sed.in
+	cp ./$(MACH)/regs.sed.in ./$(MACH)/regs.sed.in.c
+	$(COMPILE.cpp) -D_KERNEL ./$(MACH)/regs.sed.in.c | tr -d ' ' | tr '"' '@' | \
+            sed 's/\&/\\\&/g' | grep '^s/' > $@
+	-rm ./$(MACH)/regs.sed.in.c
+regs.d: ./$(MACH)/regs.sed ./$(MACH)/regs.d.in
+	sed -f ./$(MACH)/regs.sed < ./$(MACH)/regs.d.in > $@
+
 clean:
-	 -rm -f dt_grammar.h dt_lex.c dt_errtags.c dt_names.c *.o $(LIB)	
-	
+	-rm -f dt_grammar.h dt_lex.c dt_errtags.c dt_names.c *.o $(LIB) 
+	-rm -f errno.d signal.d regs.d procfs.d io.d ip.d net.d sysevent.d tcp.d udp.d
+	-rm -f *.sed $(MACH)/*.sed
+uninstall:
+	-rm -rf $(DLIBDIR)
+
+all: $(LIB) $(DLIBSRCS)
+	@/bin/true
+
+install:
+	if [ ! -d $(DLIBDIR) ] ; then \
+		mkdir $(DLIBDIR) ; \
+	fi
+	install -m 755 -o root $(DLIBSRCS) $(DLIBDIR)
+
+
