@@ -25,7 +25,7 @@
 
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
 
-#include <sys/sysevent_impl.h>
+/*#include <sys/sysevent_impl.h>*/
 
 #define	SED_MACRO(x)	s/#x(ev)/x(ev)/g
 
