@@ -22,7 +22,7 @@
  * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
  */
 
-#include <inet/ip.h>
+/*#include <inet/ip.h>*/
 
 #define	SED_REPLACE(x)	s/#x/x/g
 
